After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 624467 - “Other…” user is not always shown
“Other…” user is not always shown
Status: RESOLVED FIXED
Product: gdm
Classification: Core
Component: general
2.30.x
Other Linux
: Normal normal
: ---
Assigned To: GDM maintainers
GDM maintainers
Depends on:
Blocks:
 
 
Reported: 2010-07-15 16:06 UTC by Josselin Mouette
Modified: 2010-09-15 18:31 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Always show “other…” choice (981 bytes, patch)
2010-07-15 16:06 UTC, Josselin Mouette
committed Details | Review

Description Josselin Mouette 2010-07-15 16:06:02 UTC
Created attachment 165972 [details] [review]
Always show “other…” choice

When the system is configured to use NIS or LDAP, with no local user, no user shows up in the chooser. In this case, there is specific code that makes the “other…” choice disappear. I can’t think of any case where it would be useful, and in this case it makes logging in entirely impossible.
Comment 1 Ray Strode [halfline] 2010-09-15 18:29:04 UTC
I think this is left over baggage from this commit:

commit 5f8723c4fccff6aed79edbe635e3e16fa74a42d1
Author: Ray Strode <rstrode@redhat.com>
Date:   Thu Jul 16 17:05:17 2009 -0400

    Make greeter window more clear when disable_user_list == TRUE
    
    Previously it would show a lone "Other..." menu item that the user
    was expected to click on.  Now, instead it provides a "Log In"
    button.
    
    This commit is based almost entirely on a patch by:
    
    Philip Spencer <pspencer@fields.utoronto.ca>
    
    From:
    
    http://bugzilla.gnome.org/show_bug.cgi?id=568323


which I don't believe is relevant anymore.